--- a/frontend/src/screens/about/aboutStyle.module.css
+++ b/frontend/src/screens/about/aboutStyle.module.css
@@ -1,5 +1,11 @@
 .aboutStyle{
+    display: flex;
+    width: 100%;
+    height: 80vh;
     padding-top: 45px;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
 }
 .aboutStyle1{
     padding-top: 25px;
@@ -8,11 +14,12 @@
 
 .abouttext{
     text-align: center;
-    font-size: 20px;
+    font-size: 32px;
 }
 .abouttext1{
-    font-size: 20px;
-    color: #34639E;
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0 5px;
     margin-bottom: 0;
 }
 .abouttext2{
